manifests/core-bases/gateway-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odh-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: odh-dashboard
  template:
    metadata:
      labels:
        deployment: odh-dashboard
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - odh-dashboard
                topologyKey: topology.kubernetes.io/zone
      serviceAccount: odh-dashboard
      containers:
        - name: debug-proxy-sidecar
          image: registry.tannerjc.net/debug-proxy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          args:
            - "--upstream=http://localhost:8080"
            - "--listen=0.0.0.0:8081"
            - "--debug"
        - name: odh-dashboard
          image: $(odh-dashboard-image)
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 15
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 15
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /etc/pki/tls/certs/odh-trusted-ca-bundle.crt
              name: odh-trusted-ca-cert
              subPath: odh-trusted-ca-bundle.crt
            - mountPath: /etc/ssl/certs/odh-trusted-ca-bundle.crt
              name: odh-trusted-ca-cert
              subPath: odh-trusted-ca-bundle.crt
            - mountPath: /etc/pki/tls/certs/odh-ca-bundle.crt
              name: odh-ca-cert
              subPath: odh-ca-bundle.crt
            - mountPath: /etc/ssl/certs/odh-ca-bundle.crt
              name: odh-ca-cert
              subPath: odh-ca-bundle.crt
      volumes:
        - name: odh-trusted-ca-cert
          configMap:
            name: odh-trusted-ca-bundle
            items:
            - key: ca-bundle.crt
              path: odh-trusted-ca-bundle.crt
            optional: true
        - name: odh-ca-cert
          configMap:
            name: odh-trusted-ca-bundle
            items:
            - key: odh-ca-bundle.crt
              path: odh-ca-bundle.crt
            optional: true
