manifests/core-bases/gateway-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: odh-dashboard
spec:
  selector:
    deployment: odh-dashboard
  ports:
  - protocol: TCP
    targetPort: 8081
    port: 8081
