manifests/core-bases/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: odh-dashboard
spec:
  parentRefs:
  - name: odh-gateway
    namespace: openshift-ingress
  hostnames:
  - "gateway.apps-crc.testing"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: odh-dashboard
      port: 8080
